<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_elementos"
            android:icon="@drawable/element"
            android:title="@string/menu_elementos" />
        <item
            android:id="@+id/nav_separacao"
            android:icon="@drawable/separacao"
            android:title="@string/menu_separacao" />
        <item
            android:id="@+id/nav_finalizacao"
            android:icon="@drawable/goal"
            android:title="@string/menu_finalizacao" />
    </group>
</menu>