<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundApp"
    tools:context=".ui.SeparacaoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="4dp">

        <Button
            android:id="@+id/btnSistema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_sistema"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvValorPedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/valor_pedra"
            android:textAlignment="center"
            android:textColor="@color/texto_azul_esc"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSistema" />

        <TextView
            android:id="@+id/tvResultadoValor"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:layout_marginTop="4dp"
            android:text="@string/res_valor"
            android:textAlignment="center"
            android:textColor="@color/texto_vermelho"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvValoresOriginais"
            app:layout_constraintTop_toBottomOf="@+id/tvSoma" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/button_onoff_indicator_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValorPedra" />

        <TextView
            android:id="@+id/tvValoresOriginais"
            android:layout_width="170dp"
            android:layout_height="260dp"
            android:layout_marginTop="4dp"
            android:text="@string/valor_original"
            android:textAlignment="center"
            android:textColor="@color/texto_verde"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/tvResultadoValor"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginal" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/button_onoff_indicator_off"
            app:layout_constraintBottom_toTopOf="@+id/tvValorPedra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSistema" />

        <TextView
            android:id="@+id/tvOriginal"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="3dp"
            android:text="@string/valor_original_pedra"
            android:textAlignment="center"
            android:textColor="@color/texto_verde_esc"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvSoma"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvSoma"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="3dp"
            android:text="@string/valor_somado"
            android:textAlignment="center"
            android:textColor="@color/texto_vermelho"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvOriginal"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>